--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Montserrat', sans-serif;
 }
 
 body{
@@ -48,7 +49,7 @@ main{
 
 .seccion-2{
     width: 20%;
-    height: 90%;
+    height: 500px;
     margin-right: 20px;
     background-color: #ffffff;
     border-radius: 20px;
@@ -71,13 +72,18 @@ main{
 .h3{
     font-size: 20px;
     width: 100%;
-    height: 10%;
+    height: 5%;
     text-align: center;
 }
 
 .parrafo{
     width: 100%;
-    height: 10%;
+    height: 5%;
+}
+
+.advertencia{
+    text-align: center;
+    font-size: 12px;
 }
 
 .copiar {
@@ -91,7 +97,7 @@ main{
     height: 50px;
     display: block;
     margin: auto;
-    margin-top: 120%;
+    margin-top: 140%;
     border-radius: 20px;
     color: #ffffff;
     background-color: #457b9d;
@@ -167,7 +173,75 @@ main{
 }
 
 footer{
+    margin-top: 20px;
     color: #8d99ae;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+}
+
+footer img{
+    margin-top: 10px;
+}
+
+@media screen  and (max-width: 480px){
+    .area{
+        display: block;
+        margin: 50px auto 0;
+        font-size: 20px;
+        height: auto;
+    }
+    .izquierda{
+        height: 200px;
+    }
+    .buttons, .btn-encriptar, .btn-desencriptar{
+        display: block;
+        margin: 5px auto;
+    }
+    .btn-encriptar, .btn-desencriptar{
+        width: 80%;
+    }
+    .btn-encriptar:hover, .btn-desencriptar:hover{
+        background-color: #1d3557;
+        color: #ffffff;
+        transform: scale(1.0);
+    }
+    .main{
+        display: block;
+    }
+    .seccion-1{
+        width: 100%;
+        height: 20%;
+    }
+    .seccion-2{
+        display: block;
+        margin: 10px auto;
+        width: 80%;
+        height: 250px;
+        box-shadow: #000000;
+        margin-bottom: 10px;
+    }
+    
+    .h3, .parrafo{
+        margin-left: 5px;
+        padding: 10px;
+        text-align: center;
+        width: 90%;
+        font-size: 16px;
+    }
+    .imagen{
+        display: none;
+    }
+    .seccion-2{
+    box-shadow: 10px 5px 20px 1px #8d99ae;;
+    }
+    .btn-copiar{
+        width: 50%;
+        height: 20%;
+    }
+    .realizado{
+        padding: 10px;
+        font-size: 10px;
+    }
+    footer img{
+        margin-top: 2px;
+    }
 }
